--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@popperjs/core": "^2.11.8",
     "ag-grid-community": "^30.1.0",
-    "ag-grid-vue3": "^30.1.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.1",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "sass": "^1.66.1",
-    "vue": "^3.3.4",
+    "vue": "^3.2.36",
     "vue-facing-decorator": "^3.0.2",
     "vue-router": "^4.2.4",
     "vuex": "^4.1.0"
