--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.1",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "sass": "^1.66.1",
